# coldbot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
backend/src/coldbot/: __init__.py  main.py
database/migrations/: README.md
frontend/: package-lock.json  package.json
infra/: README.md
